; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/config/rs6000/extr_rs6000.c_rs6000_output_dwarf_dtprel.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/config/rs6000/extr_rs6000.c_rs6000_output_dwarf_dtprel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"\09.long\09\00", align 1
@DOUBLE_INT_ASM_OP = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [15 x i8] c"@dtprel+0x8000\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32)* @rs6000_output_dwarf_dtprel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rs6000_output_dwarf_dtprel(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  switch i32 %7, label %15 [
    i32 4, label %8
    i32 8, label %11
  ]

8:                                                ; preds = %3
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @fputs(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32* %9)
  br label %17

11:                                               ; preds = %3
  %12 = load i8*, i8** @DOUBLE_INT_ASM_OP, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @fputs(i8* %12, i32* %13)
  br label %17

15:                                               ; preds = %3
  %16 = call i32 (...) @gcc_unreachable()
  br label %17

17:                                               ; preds = %15, %11, %8
  %18 = load i32*, i32** %4, align 8
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @output_addr_const(i32* %18, i32 %19)
  %21 = load i32*, i32** %4, align 8
  %22 = call i32 @fputs(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i32* %21)
  ret void
}

declare dso_local i32 @fputs(i8*, i32*) #1

declare dso_local i32 @gcc_unreachable(...) #1

declare dso_local i32 @output_addr_const(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
